# Noita-CMake-Example

./: CMakeLists.txt  clipboard.cpp
HelloMod/: init.lua  mod.xml
